[package]
name = "macropad"
version = "0.1.0"
edition = "2021"

[dependencies]
adafruit-macropad = "0.4.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
critical-section = "1.1.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
panic-halt = "0.2.0"
rotary-encoder-hal = "0.5.0"
rp2040-hal = "0.6.0"
sh1106 = "0.4.0"
smart-leds = "0.3.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
ws2812-pio = "0.4.0"

[profile.dev]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.release]
lto = true
incremental = false
